iRedMail-1.4.0:
    * Supports new distribution releases:
        + CentOS 8 Stream. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.
        + Rocky Linux 8. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.
          Tested with Rocky Linux 8.3 rc1.
        + OpenBSD 6.9. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.

    * DROPPED distribution release:
        - Debian 9 (stretch). Please use Debian 10 instead.

    * Improvements:
        - SQL backends: New sql table `maillist_owners`. Used to store owners
          of subscribeable mailing lists. With this new table, if self-service
          is enabled in iRedAdmin-Pro, mailing list owner is able to login to
          iRedAdmin-Pro and manage profile and members of owned mailing lists.
        - SQL backends: Drop 4 unused SQL columns in `vmail.mailbox` table:
            - allowedsenders
            - rejectedsenders
            - allowedrecipients
            - rejectedrecipients
        - OpenLDAP backend: New attributes `listModerator` and `listOwner`.
          Used to to store moderator and owner of subscribeable mailing lists.
          With these new attributes, if self-service is enabled in
          iRedAdmin-Pro, mailing list owner is able to login to iRedAdmin-Pro
          and manage profile and members of owned mailing lists.
        - Fail2ban now stores (base64) encoded log lines in SQL database to
          avoid possible SQL injection.
        - Enable long queue id support in logwatch.

    * Fixed issues:
        - Whitelist HELO hostname used by Microsoft Outlook/Hotmail servers.
        - tools/backup_pgsql.sh: Not dump databases with `--clean` argument.
        - Not install nftables package on Ubuntu 20.04.
        - [OpenBSD] Used wrong Python MySQL driver name in iRedAPD.
        - Fail2ban can not store banned IP address when its country name
          contains quotes.

    * Updated packages: